WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276350
Cannot rely on auto-positioned absolutely positioned descendants being marked for layout
https://bugs.webkit.org/show_bug.cgi?id=276350
Summary
Cannot rely on auto-positioned absolutely positioned descendants being marked...
Ahmad Saleem
Reported
2024-07-08 20:50:49 PDT
Hi Team, While trying to see for any test failures, I came across one specific test from Blink's test case. Test Case:
https://jsfiddle.net/bfh95pdq/
^ fails in Safari Technology Preview 198 as well. While passes in both Chrome Canary 128 and Firefox Nightly 129. Blink Commit:
https://codereview.chromium.org/1217833007
(same as other
https://github.com/chromium/chromium/commit/f9fc64fcfef3cfbd4552572eb1293769d6ddc535
) Just raising so we can track and fix it. Thanks!
Attachments
Patch
(6.13 KB, patch)
2026-01-06 19:32 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.68 KB, patch)
2026-01-07 07:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.68 KB, patch)
2026-01-07 09:55 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-15 20:51:14 PDT
<
rdar://problem/131806062
>
Ahmad Saleem
Comment 2
2025-11-27 22:41:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54540
alan
Comment 3
2026-01-06 19:32:54 PST
Created
attachment 477923
[details]
Patch
alan
Comment 4
2026-01-07 07:38:22 PST
Created
attachment 477926
[details]
Patch
alan
Comment 5
2026-01-07 09:55:18 PST
Created
attachment 477928
[details]
[fast-cq]Patch
EWS
Comment 6
2026-01-07 12:21:59 PST
Committed
305229@main
(cad87d87fcb0): <
https://commits.webkit.org/305229@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477928
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug