Cannot rely on auto-positioned absolutely positioned descendants being marked for layout https://bugs.webkit.org/show_bug.cgi?id=276350 rdar://131806062

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src/+/f9fc64fcfef3cfbd4552572eb1293769d6ddc535 and
https://chromium.googlesource.com/chromium/src/+/f80ec451d0871da501ad200468203f51136ec52a

When a parent element changes size or position, absolutely positioned
children with static inline or block positions need to be re-laid out
because their computed positions depend on their parent's dimensions.

Previously, WebKit only checked hasStaticBlockPosition() and only
verified if the position changed, not the extent (width/height). This
caused failures when a parent's margin change affected the child's
computed width or static inline position.

The fix adds needsLayoutDueToStaticPosition() which proactively checks
both static inline and block positions, and verifies both position and
extent changes. This is called during layoutOutOfFlowBox() rather than
relying on earlier marking mechanisms.

Additionally, it do clean-up in 'RenderBlockFlow::adjustOutOfFlowBlock',
which is now redundant after above change.

Tests: fast/block/positioning/abspos-auto-left-and-width-change-parent-margin-left.html
       fast/block/positioning/abspos-auto-left-auto-top-inside-auto-margins.html
       fast/block/positioning/abspos-auto-left-fixed-top-change-parent-margin-left.html
       fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-2.html
       fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-3.html
       fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-4.html
       fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes.html
* LayoutTests/fast/block/positioning/abspos-auto-left-and-width-change-parent-margin-left-expected.html: Added.
* LayoutTests/fast/block/positioning/abspos-auto-left-and-width-change-parent-margin-left.html: Added.
* LayoutTests/fast/block/positioning/abspos-auto-left-auto-top-inside-auto-margins-expected.html: Added.
* LayoutTests/fast/block/positioning/abspos-auto-left-auto-top-inside-auto-margins.html: Added.
* LayoutTests/fast/block/positioning/abspos-auto-left-fixed-top-change-parent-margin-left-expected.html: Added.
* LayoutTests/fast/block/positioning/abspos-auto-left-fixed-top-change-parent-margin-left.html: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-2-expected.txt: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-2.html: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-3-expected.txt: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-3.html: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-4-expected.txt: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-4.html: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes-expected.txt: Added.
* LayoutTests/fast/block/positioning/positioned-layout-in-block-flow-when-margin-changes.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::needsLayoutDueToStaticPosition):
(WebCore::RenderBlock::layoutOutOfFlowBox):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::adjustOutOfFlowBlock):